# Vox-Arena-backend

./: Cargo.toml  diesel.toml
migrations/2024-09-16-142308_users/: up.sql
migrations/2024-09-20-202211_sol_balance/: down.sql  up.sql
src/: main.rs  schema.rs
src/models/: models.rs
src/routes/: routes.rs
src/socket/: manager.rs  mod.rs  ws.rs
src/utils/: response.rs
